# Experiment-Miscellany

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
autogen_gemm/: CMakeLists.txt  README.md  main.cu  post_process.py  utils.h
autogen_gemm/kernels/: README.md  generated_kernels.h  kernel_func_def.h  mm_128_1024_1024_grid_128_1_1_block_512_1_1.h  mm_128_128_128_grid_256_1_1_block_64_1_1.h  mm_128_256_256_grid_128_1_1_block_256_1_1.h  mm_128_512_512_grid_128_1_1_block_256_1_1.h  mm_128_64_64_grid_88_1_1_block_96_1_1.h  mm_256_1024_1024_grid_128_1_1_block_256_1_1.h  mm_256_128_128_grid_128_1_1_block_256_1_1.h  mm_256_256_256_grid_128_1_1_block_256_1_1.h  mm_256_512_512_grid_128_1_1_block_512_1_1.h  mm_256_64_64_grid_176_1_1_block_96_1_1.h  mm_32_1024_1024_grid_128_1_1_block_128_1_1.h  mm_32_128_128_grid_32_1_1_block_64_1_1.h  mm_32_256_256_grid_64_1_1_block_64_1_1.h  mm_32_512_512_grid_64_1_1_block_128_1_1.h  mm_32_64_64_grid_16_1_1_block_64_1_1.h  mm_512_1024_1024_grid_128_1_1_block_512_1_1.h  mm_512_128_128_grid_256_1_1_block_256_1_1.h  mm_512_256_256_grid_128_1_1_block_512_1_1.h  mm_512_512_512_grid_128_1_1_block_256_1_1.h  mm_512_64_64_grid_128_1_1_block_128_1_1.h  mm_64_1024_1024_grid_128_1_1_block_128_1_1.h  mm_64_128_128_grid_176_1_1_block_48_1_1.h  (+3 more)
cmake/: third_party.cmake
hello_world/: CMakeLists.txt  main.c
isl-examples/: CMakeLists.txt  aff1.cpp  isl_printer.h  map1.cpp  set1.cpp  util.h
isl_helloworld/: CMakeLists.txt
pybind_helloworld/: CMakeLists.txt  README.md
pybind_helloworld/src/: example.cpp
(+5 files in other folders)
